--- a/source/index.html
+++ b/source/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Gulp, gulp, done!</title>
+    <link rel="stylesheet" href="css/style.min.css" />
+    <link rel="stylesheet" href="build/css/normalize.css" />
+  </head>
 
-  <title>Gulp, gulp, done!</title>
-  <link rel="stylesheet" href="css/style.min.css">
-  <link rel="stylesheet" href="build/css/normalize.css">
-</head>
-
-<body>
-  <h1>Я — Апельсин. Солнца пузатый сын.</h1>
-  @@include('_helper.html')
-  <img src="images/test-png.png" alt="тестовое изображение 1">
-  <img src="images/test-jpg.jpg" alt="тестовое изображение 2">
-
-  <script src="js/script.js"></script>
-</body>
-<html>
+  <body>
+    @@include('html/_top-menu.html') @@include('html/_hero-slider.html')
+    @@include('html/_search-form.html') @@include('html/_department-links.html')
+    @@include('html/_popular-goods.html') @@include('html/_promo-goods.html')
+  </body>
+  <html></html>
+</html>
