--- a/source/html/_complementary-goods.html
+++ b/source/html/_complementary-goods.html
@@ -1,7 +1,7 @@
-<section class="index-main__popular-goods">
-  <div class="popular-goods">
-    <h2 class="popular-goods__title">Популярные товары</h2>
-    <div class="popular-goods__tab">
+<section class="index-main__complementary-goods">
+  <div class="complementary-goods">
+    <h2 class="complementary-goods__title">С этим товаром покупают</h2>
+    <div class="complementary-goods__tab">
       <!-- ! Tabs list -->
       <ul class="tab">
         <li class="tab__item">
@@ -22,6 +22,7 @@
           <button class="card__favourite-btn" aria-label="Добавить в избранное">
             Добавить в избранное
           </button>
+
           <a href="#" class="card__lin">
             <picture>
               <source
@@ -38,9 +39,8 @@
                 alt="Лампа накаливания"
               />
             </picture>
-
             <h3 class="card__title">
-              Ширина 205/80 R16 104Q Misha RF Power Grum
+              Шина 205/80 R16 104Q Misha RF Power Grum
             </h3>
             <b class="card__price">11 680 ₽</b>
           </a>
@@ -61,14 +61,14 @@
 
     <!-- ! Back-forward btn -->
     <button
-      class="popular-goods__button popular-goods__control-forward back-forward-btn"
+      class="complementary-goods__button complementary-goods__control-forward back-forward-btn"
       type="button"
       aria-label="Вперед"
     >
       Вперед
     </button>
     <button
-      class="popular-goods__button popular-goods__control-back back-forward-btn"
+      class="complementary-goods__button complementary-goods__control-back back-forward-btn"
       type="button"
       aria-label="Назад"
     >
@@ -76,7 +76,7 @@
     </button>
 
     <!-- ! More goods -->
-    <div class="popular-goods__btn">
+    <div class="complementary-goods__btn">
       <button class="cta-button cta-button--disabled cta-button--big">
         Смотреть еще
       </button>
