--- a/source/html/_hero-slider.html
+++ b/source/html/_hero-slider.html
@@ -1,4 +1,4 @@
-<section class="index-promo">
+<section class="index-main__promo">
   <!-- ! Slider, left side -->
   <article class="hero-slider">
     <ul class="hero-slider__list">
@@ -65,7 +65,7 @@
     </div>
 
     <div class="promo-action">
-      <b class="paromo-action__title">До конца акции осталось</b>
+      <b class="promo-action__title">До конца акции осталось</b>
       <table class="promo-action__countdown">
         <tr class="promo-action__countdown-tr">
           <td class="promo-action__hours-digits">00</td>
