--- a/source/html/_top-menu.html
+++ b/source/html/_top-menu.html
@@ -1,4 +1,4 @@
-<header class="top-header">
+<header class="index-body__top-header">
   <nav class="main-nav">
     <!-- ! 1st menu, top level -->
     <ul class="fav-menu">
