--- a/source/index.html
+++ b/source/index.html
@@ -10,10 +10,16 @@
     <link rel="stylesheet" href="build/css/normalize.css" />
   </head>
 
-  <body>
-    @@include('html/_top-menu.html') @@include('html/_hero-slider.html')
-    @@include('html/_search-form.html') @@include('html/_department-links.html')
-    @@include('html/_popular-goods.html') @@include('html/_promo-goods.html')
+  <body class="index-body">
+		@@include('html/_top-menu.html')
+	<main class="index-main">
+		@@include('html/_hero-slider.html')
+		@@include('html/_search-form.html')
+		@@include('html/_department-links.html')
+		@@include('html/_popular-goods.html')
+		@@include('html/_promo-goods.html')
+		@@include('html/_complementary-goods.html')
+		@@include('html/_footer.html')
+	</main>
   </body>
-  <html></html>
 </html>
