Разметка главного меню

--- a/source/html/_top-menu.html
+++ b/source/html/_top-menu.html
@@ -1,6 +1,6 @@
 <header class="index-body__top-header">
-  <nav class="main-nav">
-    <!-- ! 1st menu, top level -->
+  <nav class="nav-container">
+    <!-- ! Favourite menu -->
     <ul class="fav-menu">
       <li class="fav-menu__item">
         <a href="#" class="fav-menu__link">Магазины</a>
@@ -9,39 +9,46 @@
         <a href="#" class="fav-menu__link">Акции</a>
       </li>
       <li class="fav-menu__item">
-        <a href="#" class="fav-menu__link">Доставка и опталат</a>
+        <a href="#" class="fav-menu__link">Доставка и оплата</a>
       </li>
     </ul>
 
-    <!-- ! Logo, top level -->
-    <div class="main-nav__logo">
-      <img src="/img/global/store-logo.svg" alt="" class="main-nav__logo-img" />
+    <!-- ! Logo -->
+    <div class="store-logo">
+      <a href="#" class="store-logo__link"
+        ><img
+          src="/img/global/store-logo.svg"
+          alt="Логотип интернет-магазина"
+          class="store-logo__img"
+      /></a>
     </div>
 
-    <!-- ! Address, top level -->
-    <a href="#" class="main-nav__address"
-      >Санкт-Петербург, ул.Большая Конюшенная, д. 19</a
-    >
+    <!-- ! Address -->
+    <div class="nav-address">
+      <a href="" class="nav-address__link"
+        >Санкт-Петербург, ул.Большая Конюшенная, д. 19</a
+      >
+    </div>
 
-    <!-- ! 2nd menu, top level -->
+    <!-- ! Service menu -->
     <ul class="service-menu">
       <li class="service-menu__item">
         <a href="#" class="service-menu__link" aria-labeled="Избранное">
-          <svg width="24" height="24" viewBox="0 0 24 24" class="red">
+          <svg width="24px" height="24px" viewBox="0 0 24 24" class="red">
             <use xlink:href="img/iconsprite/icons.svg#_login"></use>
           </svg>
         </a>
       </li>
       <li class="service-menu__item">
         <a href="#" class="service-menu__link" aria-labeled="Войти">
-          <svg width="24" height="24" viewBox="0 0 24 24" class="red">
+          <svg width="24px" height="24px" viewBox="0 0 24 24" class="red">
             <use xlink:href="img/iconsprite/icons.svg#_login"></use>
           </svg>
         </a>
       </li>
       <li class="service-menu__item">
         <a href="#" class="service-menu__link" aria-labeled="Корзина">
-          <svg width="24" height="24" viewBox="0 0 24 24">
+          <svg width="24px" height="24px" viewBox="0 0 24 24">
             <use xlink:href="img/iconsprite/icons.svg#_login"></use>
           </svg>
         </a>
