--- a/source/html/_top-menu.html
+++ b/source/html/_top-menu.html
@@ -1,4 +1,4 @@
-<header class="index-body__top-header">
+<header class="nav-menu-container">
   <nav class="nav-container">
     <!-- ! Favourite menu -->
     <ul class="fav-menu">
