Завершена стилизация слайдера и товара дня

--- a/source/html/_hero-slider.html
+++ b/source/html/_hero-slider.html
@@ -48,47 +48,53 @@
         aria-label=""
       ></button>
     </div>
-    <article class="super-offer">
-      <div class="offer-comprasion">
-        <p class="offer-comprasion__new-price">200 ₽</p>
-        <b class="offer-comprasion__old-price">500 ₽</b>
-      </div>
 
-      <div class="offer-demonstration">
-        <picture class="offer-demonstration__img">
-          <source
-            type="image/webp"
-            srcset="img/index/lamp@1x.webp 1x, img/index/lamp@2x.webp 2x"
-          />
-          <!-- 1х: 232px; 2x: 464px -->
-          <img
-            src="img/index/lamp@1x.jpg"
-            srcset="img/index/lamp@2x.jpg 2x"
-            width="150"
-            height="187"
-            alt="Лампа накаливания"
-          />
-        </picture>
-        <b class="offer-demonstration__title"> Лампочка mini...</b>
-      </div>
+    <!-- ! Goods of day -->
+    <div class="super-offer">
+      <a href="" class="supper-offer-link">
+        <div class="offer-comprasion">
+          <p class="offer-comprasion__new-price">200 ₽</p>
+          <b class="offer-comprasion__old-price">500 ₽</b>
+        </div>
 
-      <div class="offer-action">
-        <p class="offer-action__count-down-title">До конца акции осталось</p>
+        <div class="offer-demonstration">
+          <picture class="offer-demonstration__img">
+            <source
+              type="image/webp"
+              srcset="img/index/lamp@1x.webp 1x, img/index/lamp@2x.webp 2x"
+            />
+            <!-- 1х: 232px; 2x: 464px -->
+            <img
+              src="img/index/lamp@1x.jpg"
+              srcset="img/index/lamp@2x.jpg 2x"
+              width="150px"
+              height="187px"
+              alt="Лампа накаливания"
+            />
+          </picture>
+          <b class="offer-demonstration__title">
+            Галогенная лампа Philips Premium H7 12V 55W...</b
+          >
+        </div>
 
-        <table class="offer-action__countdown">
-          <tr class="offer-action__countdown-tr">
-            <td class="offer-action__hours-digits">00</td>
-            <td class="offer-action__mins-digits">20</td>
-            <td class="offer-action__seconds-digits">19</td>
-          </tr>
+        <div class="offer-action">
+          <p class="offer-action__count-down-title">Спешите, спешите!</p>
 
-          <tr class="offer-action__countdown-tr">
-            <td class="offer-action__hours-text">часов</td>
-            <td class="offer-action__mins-text">минут</td>
-            <td class="offer-action__seconds-text">чекунд</td>
-          </tr>
-        </table>
-      </div>
-    </article>
+          <table class="offer-action__countdown">
+            <tr class="offer-action__countdown-tr">
+              <td class="offer-action__hours-digits">00</td>
+              <td class="offer-action__mins-digits">20</td>
+              <td class="offer-action__seconds-digits">19</td>
+            </tr>
+
+            <tr class="offer-action__countdown-tr">
+              <td class="offer-action__hours-text">часов</td>
+              <td class="offer-action__mins-text">минут</td>
+              <td class="offer-action__seconds-text">cекунд</td>
+            </tr>
+          </table>
+        </div>
+      </a>
+    </div>
   </div>
 </section>
