--- a/source/html/_top-menu.html
+++ b/source/html/_top-menu.html
@@ -35,7 +35,7 @@
       <li class="service-menu__item">
         <a href="#" class="service-menu__link" aria-labeled="Избранное">
           <svg width="24px" height="24px" viewBox="0 0 24 24" class="red">
-            <use xlink:href="img/iconsprite/icons.svg#_login"></use>
+            <use xlink:href="img/iconsprite/icons.svg#_timer"></use>
           </svg>
         </a>
       </li>
