добавлен блок с ссылками на разделы

--- a/source/html/_search-form.html
+++ b/source/html/_search-form.html
@@ -20,7 +20,7 @@
           <a href="#" class="search-tabs__link">артикулу</a>
         </li>
       </ul>
-      <h3 class="visually-hidden">Поиск по vin</h3>
+      <h3 class="visually-hidden">Поиск деталей</h3>
       <form class="search-form" method="POST" action="#">
         <label class="visually-hidden" for="search-vin-input"
           >Введите vin-код</label
