--- a/source/html/_popular-goods.html
+++ b/source/html/_popular-goods.html
@@ -1,85 +1,378 @@
-<section class="index-main__popular-goods">
-  <div class="popular-goods">
-    <h2 class="popular-goods__title">Популярные товары</h2>
-    <div class="popular-goods__tab">
-      <!-- ! Tabs list -->
-      <ul class="tab">
-        <li class="tab__item">
-          <a href="#" class="tab__link">Запчасти</a>
-          <a class="tab__link tab__link--active">Автохимия</a>
-          <a href="#" class="tab__link">Шины и диски</a>
-          <a href="#" class="tab__link">Автоэлектроника</a>
-          <a href="#" class="tab__link">Инструменты</a>
-          <a href="#" class="tab__link">Аксессуары и другое</a>
-        </li>
-      </ul>
-    </div>
+<section class="popular-container">
+  <div class="popular-goods-container">
+    <!-- ! Popular goods controls -->
+    <div class="popular-goods">
+      <div class="popular-goods__tab">
+        <!-- ! Tabs list -->
+        <ul class="tab">
+          <li class="tab__item">
+            <h2 class="popular-goods__title">Популярные товары</h2>
+          </li>
+          <li class="tab__item"><a href="#" class="tab__link">Запчасти</a></li>
+          <li class="tab__item">
+            <a class="tab__link tab__link--active">Автохимия</a>
+          </li>
+          <li class="tab__item">
+            <a href="#" class="tab__link">Шины и диски</a>
+          </li>
+          <li class="tab__item">
+            <a href="#" class="tab__link">Автоэлектроника</a>
+          </li>
+          <li class="tab__item">
+            <a href="#" class="tab__link">Инструменты</a>
+          </li>
+          <li class="tab__item">
+            <a href="#" class="load-more-btn__link">Смотреть все</a>
+          </li>
+        </ul>
+      </div>
 
-    <!-- ! Card list -->
-    <div class="list-goods">
-      <ul class="card">
-        <li class="card__item">
-          <button class="card__favourite-btn" aria-label="Добавить в избранное">
-            Добавить в избранное
-          </button>
-          <a href="#" class="card__lin">
-            <picture>
-              <source
-                type="image/webp"
-                srcset="img/index/lamp@1x.webp 1x, img/index/lamp@wx.webp 2x"
-              />
-              <!-- 1х: 230px; 2x: 460px -->
-              <img
-                class="card__img"
-                src="img/index/lamp@1x.jpg"
-                srcset="img/index/lamp@2x.jpg 2x"
-                width="150"
-                height="187"
-                alt="Лампа накаливания"
-              />
-            </picture>
+      <div class="card-container">
+        <ul class="card">
+          <li class="card__item card__item--sale">
+            <a href="#" class="card__link">
+              <div class="card__img-container">
+                <picture>
+                  <source
+                    type="image/webp"
+                    srcset="
+                      img/index/lamp@1x.webp 1x,
+                      img/index/lamp@2x.webp 2x
+                    "
+                  />
+                  <!-- 1х: 230px; 2x: 460px -->
+                  <img
+                    class="card__img"
+                    src="img/index/lamp@1x.jpg"
+                    srcset="img/index/lamp@2x.jpg 2x"
+                    width="171px"
+                    height="201px"
+                    alt="Лампа накаливания"
+                  />
+                </picture>
+              </div>
+              <div class="card__title-container">
+                <h3 class="card__title">
+                  Ширина 205/80 R16 104Q Misha RF Power Grum
+                </h3>
+                <b class="card__price">11 680 ₽</b>
+              </div>
 
-            <h3 class="card__title">
-              Ширина 205/80 R16 104Q Misha RF Power Grum
-            </h3>
-            <b class="card__price">11 680 ₽</b>
-          </a>
-          <a
-            href="#"
-            class="card__buy"
-            aria-label="Добавить в корзину"
-            type="button"
-          >
-            Добавить в корзину
-          </a>
-          <a href="#" class="card__notify-btn visually-hidden"
-            >Сообщить о поступлении</a
-          >
-        </li>
-      </ul>
-    </div>
+              <div class="card__btn-container">
+                <button
+                  class="card__favourite"
+                  aria-label="Добавить в избранное"
+                >
+                  <svg
+                    width="27"
+                    height="24"
+                    viewBox="0 0 27 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M7.36656 1C3.47849 1 0.392496 4.56658 1.10209 9.68573C1.71793 14.1286 12.3223 23 13.5 23C14.6777 23 25.2821 14.1286 25.8979 9.68573C26.6075 4.56647 23.5215 1 19.6334 1C17.0414 1 15.0222 2.0898 13.5 4.26939C11.9778 2.0898 9.9586 1 7.36656 1Z"
+                      stroke="black"
+                      stroke-opacity="0.3"
+                      stroke-width="2"
+                    />
+                  </svg>
+                </button>
 
-    <!-- ! Back-forward btn -->
-    <button
-      class="popular-goods__button popular-goods__control-forward back-forward-btn"
-      type="button"
-      aria-label="Вперед"
-    >
-      Вперед
-    </button>
-    <button
-      class="popular-goods__button popular-goods__control-back back-forward-btn"
-      type="button"
-      aria-label="Назад"
-    >
-      Назад
-    </button>
+                <a
+                  href="#"
+                  class="card__buy"
+                  aria-label="Добавить в корзину"
+                  type="button"
+                  ><svg
+                    width="22"
+                    height="26"
+                    viewBox="0 0 22 26"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M1 6.53846V25H21V6.53846H1ZM5.54545 6.53846C5.54545 6.53846 5.54545 1 11 1C16.4545 1 16.4545 6.53846 16.4545 6.53846"
+                      fill="#FF7931"
+                    />
+                    <path
+                      d="M5.54545 6.53846C5.54545 6.53846 5.54545 1 11 1C16.4545 1 16.4545 6.53846 16.4545 6.53846M1 6.53846V25H21V6.53846H1Z"
+                      stroke="white"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </a>
+                <a href="#" class="card__notify-btn visually-hidden"
+                  >Сообщить о поступлении</a
+                >
+              </div>
+            </a>
+          </li>
+          <li class="card__item card__item--sale">
+            <a href="#" class="card__link">
+              <div class="card__img-container">
+                <picture>
+                  <source
+                    type="image/webp"
+                    srcset="
+                      img/index/lamp@1x.webp 1x,
+                      img/index/lamp@2x.webp 2x
+                    "
+                  />
+                  <!-- 1х: 230px; 2x: 460px -->
+                  <img
+                    class="card__img"
+                    src="img/index/lamp@1x.jpg"
+                    srcset="img/index/lamp@2x.jpg 2x"
+                    width="171px"
+                    height="201px"
+                    alt="Лампа накаливания"
+                  />
+                </picture>
+              </div>
+              <div class="card__title-container">
+                <h3 class="card__title">
+                  Ширина 205/80 R16 104Q Misha RF Power Grum
+                </h3>
+                <b class="card__price">11 680 ₽</b>
+              </div>
 
-    <!-- ! More goods -->
-    <div class="popular-goods__btn">
-      <button class="cta-button cta-button--disabled cta-button--big">
-        Смотреть еще
-      </button>
+              <div class="card__btn-container">
+                <button
+                  class="card__favourite"
+                  aria-label="Добавить в избранное"
+                >
+                  <svg
+                    width="27"
+                    height="24"
+                    viewBox="0 0 27 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M7.36656 1C3.47849 1 0.392496 4.56658 1.10209 9.68573C1.71793 14.1286 12.3223 23 13.5 23C14.6777 23 25.2821 14.1286 25.8979 9.68573C26.6075 4.56647 23.5215 1 19.6334 1C17.0414 1 15.0222 2.0898 13.5 4.26939C11.9778 2.0898 9.9586 1 7.36656 1Z"
+                      stroke="black"
+                      stroke-opacity="0.3"
+                      stroke-width="2"
+                    />
+                  </svg>
+                </button>
+
+                <a
+                  href="#"
+                  class="card__buy"
+                  aria-label="Добавить в корзину"
+                  type="button"
+                  ><svg
+                    width="22"
+                    height="26"
+                    viewBox="0 0 22 26"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M1 6.53846V25H21V6.53846H1ZM5.54545 6.53846C5.54545 6.53846 5.54545 1 11 1C16.4545 1 16.4545 6.53846 16.4545 6.53846"
+                      fill="#FF7931"
+                    />
+                    <path
+                      d="M5.54545 6.53846C5.54545 6.53846 5.54545 1 11 1C16.4545 1 16.4545 6.53846 16.4545 6.53846M1 6.53846V25H21V6.53846H1Z"
+                      stroke="white"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </a>
+                <a href="#" class="card__notify-btn visually-hidden"
+                  >Сообщить о поступлении</a
+                >
+              </div>
+            </a>
+          </li>
+
+          <li class="card__item">
+            <a href="#" class="card__link">
+              <div class="card__img-container">
+                <picture>
+                  <source
+                    type="image/webp"
+                    srcset="
+                      img/index/lamp@1x.webp 1x,
+                      img/index/lamp@2x.webp 2x
+                    "
+                  />
+                  <!-- 1х: 230px; 2x: 460px -->
+                  <img
+                    class="card__img"
+                    src="img/index/lamp@1x.jpg"
+                    srcset="img/index/lamp@2x.jpg 2x"
+                    width="171px"
+                    height="201px"
+                    alt="Лампа накаливания"
+                  />
+                </picture>
+              </div>
+              <div class="card__title-container">
+                <h3 class="card__title">
+                  Ширина 205/80 R16 104Q Misha RF Power Grum
+                </h3>
+                <b class="card__price">112 680 ₽</b>
+              </div>
+
+              <div class="card__btn-container">
+                <button
+                  class="card__favourite"
+                  aria-label="Добавить в избранное"
+                >
+                  <svg
+                    width="27"
+                    height="24"
+                    viewBox="0 0 27 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M7.36656 1C3.47849 1 0.392496 4.56658 1.10209 9.68573C1.71793 14.1286 12.3223 23 13.5 23C14.6777 23 25.2821 14.1286 25.8979 9.68573C26.6075 4.56647 23.5215 1 19.6334 1C17.0414 1 15.0222 2.0898 13.5 4.26939C11.9778 2.0898 9.9586 1 7.36656 1Z"
+                      stroke="black"
+                      stroke-opacity="0.3"
+                      stroke-width="2"
+                    />
+                  </svg>
+                </button>
+
+                <a
+                  href="#"
+                  class="card__buy"
+                  aria-label="Добавить в корзину"
+                  type="button"
+                  ><svg
+                    width="22"
+                    height="26"
+                    viewBox="0 0 22 26"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M1 6.53846V25H21V6.53846H1ZM5.54545 6.53846C5.54545 6.53846 5.54545 1 11 1C16.4545 1 16.4545 6.53846 16.4545 6.53846"
+                      fill="#FF7931"
+                    />
+                    <path
+                      d="M5.54545 6.53846C5.54545 6.53846 5.54545 1 11 1C16.4545 1 16.4545 6.53846 16.4545 6.53846M1 6.53846V25H21V6.53846H1Z"
+                      stroke="white"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </a>
+                <a href="#" class="card__notify-btn visually-hidden"
+                  >Сообщить о поступлении</a
+                >
+              </div>
+            </a>
+          </li>
+
+          <li class="card__item">
+            <a href="#" class="card__link">
+              <div class="card__img-container">
+                <picture>
+                  <source
+                    type="image/webp"
+                    srcset="
+                      img/index/lamp@1x.webp 1x,
+                      img/index/lamp@2x.webp 2x
+                    "
+                  />
+                  <!-- 1х: 230px; 2x: 460px -->
+                  <img
+                    class="card__img"
+                    src="img/index/lamp@1x.jpg"
+                    srcset="img/index/lamp@2x.jpg 2x"
+                    width="171px"
+                    height="201px"
+                    alt="Лампа накаливания"
+                  />
+                </picture>
+              </div>
+              <div class="card__title-container">
+                <h3 class="card__title">
+                  Ширина 205/80 R16 104Q Misha RF Power Grum
+                </h3>
+                <b class="card__price card__price--out">11 680 ₽</b>
+              </div>
+
+              <div class="card__btn-container">
+                <button
+                  class="card__favourite"
+                  aria-label="Добавить в избранное"
+                >
+                  <svg
+                    width="27"
+                    height="24"
+                    viewBox="0 0 27 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M7.36656 1C3.47849 1 0.392496 4.56658 1.10209 9.68573C1.71793 14.1286 12.3223 23 13.5 23C14.6777 23 25.2821 14.1286 25.8979 9.68573C26.6075 4.56647 23.5215 1 19.6334 1C17.0414 1 15.0222 2.0898 13.5 4.26939C11.9778 2.0898 9.9586 1 7.36656 1Z"
+                      stroke="black"
+                      stroke-opacity="0.3"
+                      stroke-width="2"
+                    />
+                  </svg>
+                </button>
+
+                <a
+                  href="#"
+                  class="card__buy visually-hidden"
+                  aria-label="Добавить в корзину"
+                  type="button"
+                  ><svg
+                    width="22"
+                    height="26"
+                    viewBox="0 0 22 26"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M1 6.53846V25H21V6.53846H1ZM5.54545 6.53846C5.54545 6.53846 5.54545 1 11 1C16.4545 1 16.4545 6.53846 16.4545 6.53846"
+                      fill="#FF7931"
+                    />
+                    <path
+                      d="M5.54545 6.53846C5.54545 6.53846 5.54545 1 11 1C16.4545 1 16.4545 6.53846 16.4545 6.53846M1 6.53846V25H21V6.53846H1Z"
+                      stroke="white"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </a>
+                <a href="#" class="card__notify-me">Сообщить о поступлении</a>
+              </div>
+            </a>
+          </li>
+        </ul>
+        <button
+          class="slider-popular__button slider-popular__control-forward back-forward-btn back-forward-btn--slider-goods"
+          type="button"
+          aria-label="Вперед"
+        ></button>
+        <button
+          class="slider-popular__button slider-popular__control-back back-forward-btn back-forward-btn--slider-goods"
+          type="button"
+          aria-label=""
+        ></button>
+      </div>
     </div>
   </div>
 </section>
