--- a/source/index.html
+++ b/source/index.html
@@ -16,11 +16,11 @@
 		@@include('html/_hero-slider.html')
 		@@include('html/_search-form.html')
 		@@include('html/_department-links.html')
+		@@include('html/_popular-goods.html')
 
 
 
-			<!-- 				@@include('html/_popular-goods.html')
-		@@include('html/_promo-goods.html')
+			<!--		@@include('html/_promo-goods.html')
 		@@include('html/_complementary-goods.html')
 		@@include('html/_footer.html') -->
 	</main>
