Добавлен блок Также часто

--- a/source/html/_popular-goods.html
+++ b/source/html/_popular-goods.html
@@ -6,7 +6,7 @@
         <!-- ! Tabs list -->
         <ul class="tab">
           <li class="tab__item">
-            <h2 class="popular-goods__title">Популярные товары</h2>
+            <h2 class="tab__title">Популярные товары</h2>
           </li>
           <li class="tab__item"><a href="#" class="tab__link">Запчасти</a></li>
           <li class="tab__item">
@@ -22,7 +22,7 @@
             <a href="#" class="tab__link">Инструменты</a>
           </li>
           <li class="tab__item">
-            <a href="#" class="load-more-btn__link">Смотреть все</a>
+            <a href="#">Смотреть все</a>
           </li>
         </ul>
       </div>
