--- a/source/html/_promo-goods.html
+++ b/source/html/_promo-goods.html
@@ -1,24 +1,10 @@
-<section class="index-main">
-  <div class="promo-banner">
-    <div class="promo-banner__img-container">
-      <picture>
-        <source
-          type="image/webp"
-          srcset="img/index/banner1x.webp 1x, img/index/banner2x.webp 2x"
-        />
-        <!-- 1х: 232px; 2x: 464px -->
-        <img
-          src="img/index/banner@1x.jpg"
-          srcset="img/index/banner@2x.jpg 2x"
-          width="1170"
-          alt="Реклама новых покрышек Nokian"
-        />
-      </picture>
-      <div class="promo-banner__offer">
-        <h3 class="promo-banner__title">Скидки до 50% на все товары</h3>
-        <p class="promo-banner__subtitle">Также каждому подарок в подарок</p>
-      </div>
-    </div>
-    <button class="cta-button cta-button--promo">Смотреть еще</button>
+<section class="promo-banner">
+  <div class="banner">
+    <a href="" class="banner__link"
+      ><img
+        class="banner__img"
+        src="img/index/banner@1x.jpg"
+        alt="Распродажа покрышек. Скидки до -50%!"
+    /></a>
   </div>
 </section>
