--- a/source/index.html
+++ b/source/index.html
@@ -17,12 +17,10 @@
 		@@include('html/_search-form.html')
 		@@include('html/_department-links.html')
 		@@include('html/_popular-goods.html')
-			@@include('html/_promo-goods.html')
+		@@include('html/_promo-goods.html')
 		@@include('html/_complementary-goods.html')
+		@@include('html/_footer.html')
 
-
-
-			<!--		@@include('html/_footer.html') -->
 	</main>
   </body>
 </html>
