--- a/source/index.html
+++ b/source/index.html
@@ -20,7 +20,9 @@
 		@@include('html/_promo-goods.html')
 		@@include('html/_complementary-goods.html')
 		@@include('html/_footer.html')
-
+	<svg class="svg-_magnifying-glass-dims">
+							<use xlink:href="img/iconsprite/icons.svg#_magnifying-glass"></use>
+	</svg>
 	</main>
   </body>
 </html>
