--- a/source/html/_top-menu.html
+++ b/source/html/_top-menu.html
@@ -25,6 +25,9 @@
 
     <!-- ! Address -->
     <div class="nav-address">
+      <svg width="32" height="32" class="icon-sprite">
+        <use xlink:href="img/iconsprite/icons.svg#_arrowAddress"></use>
+      </svg>
       <a href="" class="nav-address__link"
         >Санкт-Петербург, ул.Большая Конюшенная, д. 19</a
       >
@@ -34,22 +37,22 @@
     <ul class="service-menu">
       <li class="service-menu__item">
         <a href="#" class="service-menu__link" aria-labeled="Избранное">
-          <svg width="24px" height="24px" viewBox="0 0 24 24" class="red">
-            <use xlink:href="img/iconsprite/icons.svg#_timer"></use>
+          <svg width="32" height="32" class="icon-sprite">
+            <use xlink:href="img/iconsprite/icons.svg#_favouriteItem"></use>
           </svg>
         </a>
       </li>
       <li class="service-menu__item">
         <a href="#" class="service-menu__link" aria-labeled="Войти">
-          <svg width="24px" height="24px" viewBox="0 0 24 24" class="red">
-            <use xlink:href="img/iconsprite/icons.svg#_login"></use>
+          <svg width="32" height="32" class="icon-sprite">
+            <use xlink:href="img/iconsprite/icons.svg#_userLogin"></use>
           </svg>
         </a>
       </li>
       <li class="service-menu__item">
         <a href="#" class="service-menu__link" aria-labeled="Корзина">
-          <svg width="24px" height="24px" viewBox="0 0 24 24">
-            <use xlink:href="img/iconsprite/icons.svg#_login"></use>
+          <svg width="32" height="32" class="icon-sprite">
+            <use xlink:href="img/iconsprite/icons.svg#_bag"></use>
           </svg>
         </a>
       </li>
