закончена десктопная версия

--- a/source/html/_top-menu.html
+++ b/source/html/_top-menu.html
@@ -17,7 +17,7 @@
     <div class="store-logo">
       <a href="#" class="store-logo__link"
         ><img
-          src="/img/global/store-logo.svg"
+          src="img/global/store-logo.svg"
           alt="Логотип интернет-магазина"
           class="store-logo__img"
       /></a>
