--- a/source/html/_hero-slider.html
+++ b/source/html/_hero-slider.html
@@ -9,17 +9,11 @@
               alt="Реклама. Запчасти на все виды автомобилей"
               class="slider__img"
             />
-            <div class="slider__text-container">
-              <b class="slider__title">Запчасти</b>
-              <b class="slider__subtitle"
-                >на все виды автомобилей по цене производителя</b
-              >
-            </div>
           </a>
         </li>
       </ul>
 
-      <ul class="slider-pagination">
+      <!-- <ul class="slider-pagination">
         <li class="slider-pagination__item slide-pagination__item--active">
           <a href="#" class="slider-pagination__link"></a>
         </li>
@@ -35,8 +29,8 @@
         <li class="slider-pagination__item">
           <a href="#" class="slider-pagination__link"></a>
         </li>
-      </ul>
-
+      </ul> -->
+      <!-- 
       <button
         class="slider__button slider__control-forward back-forward-btn"
         type="button"
@@ -46,7 +40,7 @@
         class="slider__button slider__control-back back-forward-btn"
         type="button"
         aria-label=""
-      ></button>
+      ></button> -->
     </div>
 
     <!-- ! Goods of day -->
@@ -63,7 +57,6 @@
               type="image/webp"
               srcset="img/index/lamp@1x.webp 1x, img/index/lamp@2x.webp 2x"
             />
-            <!-- 1х: 232px; 2x: 464px -->
             <img
               src="img/index/lamp@1x.jpg"
               srcset="img/index/lamp@2x.jpg 2x"
