--- a/source/html/_top-menu.html
+++ b/source/html/_top-menu.html
@@ -1,5 +1,10 @@
 <header class="nav-menu-container">
   <nav class="nav-container">
+    <button class="bobs-burger-menu" aria-label="Открыть меню">
+      <svg width="32" height="32" class="icon-sprite">
+        <use xlink:href="img/iconsprite/icons.svg#_bob-burger-menu"></use>
+      </svg>
+    </button>
     <!-- ! Favourite menu -->
     <ul class="fav-menu">
       <li class="fav-menu__item">
@@ -61,10 +66,10 @@
     <!-- ! Main links, bottom menu -->
     <ul class="nav-menu">
       <li class="nav-menu__item">
-        <a href="#" class="nav-menu__link">Каталог запчастей</a>
+        <a href="#" class="nav-menu__link">Запчасти</a>
       </li>
       <li class="nav-menu__item">
-        <a href="#" class="nav-menu__link">Каталог ТО</a>
+        <a href="#" class="nav-menu__link">Молдинги</a>
       </li>
       <li class="nav-menu__item nav-menu__item--active">
         <a href="#" class="nav-menu__link">Шины</a>
@@ -83,6 +88,9 @@
       </li>
       <li class="nav-menu__item">
         <a href="#" class="nav-menu__link">Аксессуары</a>
+      </li>
+      <li class="nav-menu__item">
+        <a href="#" class="nav-menu__link">Автозвук</a>
       </li>
     </ul>
   </nav>
