--- a/source/html/_search-form.html
+++ b/source/html/_search-form.html
@@ -34,7 +34,14 @@
           class="search-form__input"
         />
         <button class="cta-button search-form__button" type="submit">
-          Искать
+          <span class="search-form__button-text">Искать</span>
+          <svg
+            width="24"
+            height="24"
+            class="icon-sprite search-form__icon-mobile"
+          >
+            <use xlink:href="img/iconsprite/icons.svg#_search-icon"></use>
+          </svg>
         </button>
       </form>
     </div>
