Добавлен блок каталог и популярные товары

--- a/source/html/_complementary-goods.html
+++ b/source/html/_complementary-goods.html
@@ -1,29 +1,30 @@
-<section class="complementary-container">
-  <div class="complementary-goods-container">
+<section class="compl-container">
+  <div class="popular-goods-container">
     <!-- ! Popular goods controls -->
-    <div class="complementary-goods">
-      <div class="complementary-goods__tab">
+    <div class="compl-goods">
+      <div class="compl-goods__tab">
         <!-- ! Tabs list -->
         <ul class="tab">
           <li class="tab__item">
-            <h2
-              class="tab__title complementary-goods--title-without-link-right"
-            >
-              Также часто покупают
-            </h2>
+            <h2 class="tab__title">Также покупают</h2>
           </li>
-          <li class="tab__item"><a href="#" class="tab__link">Запчасти</a></li>
-          <li class="tab__item">
-            <a class="tab__link tab__link--active">Автохимия</a>
+          <li class="tab__item tab--right-aligned">
+            <a href="#" class="tab__link">Брелоки</a>
           </li>
           <li class="tab__item">
-            <a href="#" class="tab__link">Шины и диски</a>
+            <a class="tab__link tab__link--active">Камеры</a>
           </li>
           <li class="tab__item">
-            <a href="#" class="tab__link">Автоэлектроника</a>
+            <a href="#" class="tab__link">Тормоза</a>
           </li>
           <li class="tab__item">
-            <a href="#" class="tab__link">Инструменты</a>
+            <a href="#" class="tab__link">Жидкости и смазки</a>
+          </li>
+          <li class="tab__item">
+            <a href="#" class="tab__link">Детские кресла</a>
+          </li>
+          <li class="tab__item no-more-link">
+            <a href="#">Смотреть все</a>
           </li>
         </ul>
       </div>
@@ -281,7 +282,7 @@
             </a>
           </li>
 
-          <li class="card__item">
+          <li class="card__item tested">
             <a href="#" class="card__link">
               <div class="card__img-container">
                 <picture>
