--- a/source/html/_popular-goods.html
+++ b/source/html/_popular-goods.html
@@ -1,27 +1,29 @@
-<section class="popular-container">
+<section class="compl-container">
   <div class="popular-goods-container">
     <!-- ! Popular goods controls -->
-    <div class="popular-goods">
-      <div class="popular-goods__tab">
+    <div class="compl-goods">
+      <div class="compl-goods__tab">
         <!-- ! Tabs list -->
         <ul class="tab">
           <li class="tab__item">
             <h2 class="tab__title">Популярные товары</h2>
           </li>
-          <li class="tab__item"><a href="#" class="tab__link">Запчасти</a></li>
           <li class="tab__item">
-            <a class="tab__link tab__link--active">Автохимия</a>
+            <a href="#" class="tab__link tab__link--active">Камеры</a>
           </li>
           <li class="tab__item">
-            <a href="#" class="tab__link">Шины и диски</a>
+            <a class="tab__link">Фары</a>
           </li>
           <li class="tab__item">
-            <a href="#" class="tab__link">Автоэлектроника</a>
+            <a href="#" class="tab__link">Дворники</a>
           </li>
           <li class="tab__item">
-            <a href="#" class="tab__link">Инструменты</a>
+            <a href="#" class="tab__link">Задние кресла</a>
           </li>
-          <li class="tab__item tab__item--link">
+          <li class="tab__item">
+            <a href="#" class="tab__link">Задние</a>
+          </li>
+          <li class="tab__item no-more-link">
             <a href="#">Смотреть все</a>
           </li>
         </ul>
@@ -280,7 +282,7 @@
             </a>
           </li>
 
-          <li class="card__item">
+          <li class="card__item tested">
             <a href="#" class="card__link">
               <div class="card__img-container">
                 <picture>
